# ai0

./: README.md  app.py  pyproject.toml  requirements.txt
ai/: .gitignore  ollama-webscrape-app.py  pyproject.toml  requirements.txt  webscrape-app.py
